--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Roll Your Dice!!!</h1>
+        <h1>Roll Your Dice!</h1>
         <div id="resolution"></div>
         <div class="dices">
             <div id="leftDiceDiv">
