--- a/index.html
+++ b/index.html
@@ -18,10 +18,12 @@
         <div class="dices">
             <div id="leftDiceDiv">
                 <div class="dice"></div>
+                <span id="yourDice">Your Dice</span>
                 <button id="rollIt" onclick="onLoad()">Roll It!</button>
             </div>
             <div id="rightDiceDiv">
                 <div class="dice"></div>
+                <span id="computer">Computer</span>
             </div>
         </div>
     </div>
